# TRP_Unified

./: .gitignore  .ic-assets.json5  503_FIX_SUMMARY.md  AI_ENGINE_FIX.md  AI_PIPELINE_CONFIRMATION.md  AI_PIPELINE_DETAILED.md  AI_PIPELINE_OPTIMIZATIONS.md  ALL_CANISTERS_DEPLOYED.md  ALL_CANISTERS_FIXED.md  ALTERNATIVE_DEPLOYMENT.md  ARTICLES_PRELOAD_GUIDE.md  AXIOM_NFT_REQUIREMENTS.md  AXIOM_NFT_TROUBLESHOOTING.md  BACKEND_FUNCTIONS_TO_ADD.md  CANIC_ICYDB_IMPROVEMENTS.md  CANISTER_AUDIT_REPORT.md  COMPLETE_DEPLOYMENT_SOLUTION.md  COMPLETE_DEPLOYMENT_STATUS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_OPTIONAL_DEPLOYMENT.md  CONSOLE_ERRORS_FIX.md  CRITICAL_DEPLOYMENT_BLOCKER.md  CURSOR_E2E_VERIFICATION_PROMPT.md  CURSOR_GITHUB_SETUP.md  Cargo.toml  DEEPSEEK_R1_ARCHITECTURE.md  DEEPSEEK_R1_DEPLOYMENT_COMPLETE.md  DEEPSEEK_R1_INTEGRATION_GUIDE.md  DEEPSEEK_R1_SUMMARY.md  DEPLOY.sh  DEPLOYMENT_BLOCKER_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_STATUS.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_FINAL_COMPLETE.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_README.md  (+184 more)
..bfg-report/2025-12-15/11-11-43/: cache-stats.txt  changed-files.txt  object-id-map.old-new.txt
backend/ai_engine/: Cargo.toml  ai_engine.did
backend/ai_engine/src/: lib.rs  llm_council.rs  memory.rs
backend/axiom_nft/: Cargo.toml  axiom_nft.did
backend/axiom_nft/src/: lib.rs
backend/core/: Cargo.toml
backend/core/src/: lib.rs
backend/deepseek_model/: Cargo.toml  INFERENCE_OPTIMIZATION.md  deepseek_model.did
backend/deepseek_model/src/: lib.rs
backend/escrow/: Cargo.toml  escrow.did
backend/escrow/src/: lib.rs
backend/icspicy/: Cargo.toml  icspicy.did
backend/icspicy/src/: lib.rs
backend/kip/: Cargo.toml  kip.did
backend/kip/src/: lib.rs
backend/logistics/: Cargo.toml  logistics.did
backend/logistics/src/: ase_manuals.rs  lib.rs
backend/nft/: Cargo.toml
backend/nft/src/: controller.rs  lib.rs  multichain.rs
backend/ordinals_canister/: Cargo.toml  ordinals_canister.did
backend/ordinals_canister/src/: lib.rs
backend/queen_bee/: Cargo.toml
backend/queen_bee/src/: lib.rs
backend/raven_ai/: Cargo.toml  notifications_expanded.txt  raven_ai.did
backend/raven_ai/src/: ai_optimizations.rs  lib.rs
backend/sis_canister/: Cargo.toml  sis_canister.did
backend/sis_canister/src/: lib.rs
backend/siwb_canister/: Cargo.toml  siwb_canister.did
backend/siwb_canister/src/: lib.rs
backend/siwe_canister/: Cargo.toml  siwe_canister.did
backend/siwe_canister/src/: lib.rs
backend/siws_canister/: Cargo.toml  siws_canister.did
backend/siws_canister/src/: lib.rs
backend/staking/: Cargo.toml
backend/staking/src/: lib.rs
backend/treasury/: Cargo.toml  treasury.did
backend/treasury/src/: lib.rs
backend/vector_db/: Cargo.toml  vector_db.did
backend/vector_db/src/: lib.rs
deployment_package/: DEPLOYMENT_INSTRUCTIONS.md  deployment_info.json  ordinals_canister.did  ordinals_canister.wasm  sis_canister.did  sis_canister.wasm  siwb_canister.did  siwb_canister.wasm  siwe_canister.did  siwe_canister.wasm  siws_canister.did  siws_canister.wasm
docs/: INTEGRATIONS.md  WHITEPAPER.md
frontend/: .ic-assets.json5  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AxiomNFTCard.tsx  IdentityKitBridge.tsx  Onboarding.tsx  RavenAIChatbot.tsx
frontend/src/config/: secureConfig.ts  tokenomics.ts
frontend/src/contexts/: LanguageContext.tsx
frontend/src/hooks/: useActors.ts  useRavenAICompanion.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: actor-hooks.ts  auth-utils.ts  index.ts
frontend/src/pages/: LandingPage.tsx  PitchDeck.tsx  TokenomicsPage.tsx
frontend/src/services/: actorFactory.ts  aiCouncil.ts  axiomService.ts  backendAIService.ts  canisterConfig.ts  coreService.ts  crosswordService.ts  demoAuthService.ts  gameStatsService.ts  haloService.ts  icSpicyMintService.ts  icSpicyService.ts  identityKitService.ts  kipService.ts  logisticsService.ts  marketplaceService.ts  newsService.ts  nftService.ts  oisySignerService.ts  paymentService.ts  plugService.ts  profileService.ts  queenBeeService.ts  ravenAICanisterService.ts  ravenAICompanion.ts  ravenAIService.ts  session.ts  sk8PunksService.ts  stakingService.ts  subscriptionService.ts  tokenService.ts  transactionService.ts  treasuryService.ts  voiceService.ts
frontend/src/stores/: accessibilityStore.ts  authStore.ts  walletStore.ts
frontend/src/styles/: newspaper.css
icp-coder/: FIXES_APPLIED.md  README.md  SETUP_COMPLETE.md  STATUS.md  verify_setup.sh
icp-coder/backend/: .env.example  Dockerfile  Makefile  docker-compose.yml  go.mod
icp-coder/backend/scripts/: Dockerfile.rag  rag_service.py  requirements.txt
icp-coder/mcp_server/: package-lock.json  package.json
icp-coder/mcp_server/src/: index.ts
scripts/: articles_data.json  auto_topup.sh  build.sh  configure_raven_ai_keys_mainnet.sh  create_all_articles.sh  create_articles_node.js  create_articles_simple.sh  deploy_all.sh  deploy_complete.sh  deploy_final.sh  deploy_frontend.sh  deploy_mainnet.sh  deploy_mainnet_complete.sh  deploy_multi_chain.sh  deploy_optional_canisters.sh  dev.sh  dfx_safe.sh  dfx_safe_env.sh  generate_articles.js  health_monitor.sh  load_articles.js  preload_articles.rs  preload_articles.sh  preload_articles.ts  preload_articles_complete.ts  register_canisters.sh  seed_spicy_inventory.sh  top_up_raven_ai.sh  update_queen_bee_config.sh  verify_axiom_nfts.sh  verify_deployment.sh  verify_mainnet_deployment.sh
src/declarations/ai_engine/: ai_engine.did.js  index.d.ts  index.js
src/declarations/axiom_1/: index.d.ts
src/declarations/axiom_2/: axiom_2.did.d.ts  index.d.ts
src/declarations/axiom_3/: index.d.ts
src/declarations/axiom_4/: index.d.ts  index.js
src/declarations/axiom_nft/: index.d.ts
src/declarations/core/: core.did  core.did.d.ts
(+159 files in other folders)
