[workspace]
members = [
    "backend/core",
    "backend/nft",
    "backend/kip",
    "backend/treasury",
    "backend/escrow",
    "backend/logistics",
    "backend/ai_engine",
    "backend/raven_ai",
    "backend/axiom_nft",
    "backend/icspicy",
    "backend/deepseek_model",
    "backend/vector_db",
    "backend/queen_bee",
    "backend/staking",
    "backend/siwe_canister",
    "backend/siws_canister",
    "backend/siwb_canister",
    "backend/sis_canister",
    "backend/ordinals_canister"
]
resolver = "2"

[workspace.dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
signature = "2.1"
siwe = "0.6"
libsecp256k1 = "0.7"

# ic-cdk-macros is part of ic-cdk in 0.13, not separate

[profile.release]
lto = true
opt-level = "z"

