[package]
name = "axiom_nft"
version = "1.0.0"
edition = "2021"
description = "AXIOM NFT - Individual AI Agent Canister with HTTP outcalls and persistent memory"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_json.workspace = true
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 'z'
lto = true

