[package]
name = "icspicy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
bs58 = "0.5"
image = { version = "0.25", default-features = false }
ic-cdk-timers = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

