[package]
name = "raven_ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
sha2 = "0.10"
flate2 = "1.0"
regex = "1.10"

[profile.release]
lto = true
opt-level = "z"



