[package]
name = "siwb_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
libsecp256k1 = { workspace = true }
ripemd = "0.1"
bs58 = "0.5"
base64 = "0.21"

[profile.release]
lto = true
opt-level = "z"

