[package]
name = "siwe_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
k256 = { workspace = true }
libsecp256k1 = { workspace = true }
siwe = { workspace = true }

[profile.release]
lto = true
opt-level = "z"

