[package]
name = "treasury"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
ripemd = "0.1"






